--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@rollup/plugin-json": "^6.0.1"
+		"@rollup/plugin-json": "^6.0.1",
+		"nodemailer": "^6.9.7"
 	}
 }
